--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest --passWithNoTests",
+    "e2e": "cypress run --e2e",
+    "e2e:open": "cypress open --e2e",
     "lint": "npm run lint:ts && npm run lint:styles",
     "lint:fix": "npm run lint:ts:fix && npm run lint:styles:fix",
     "lint:ts": "eslint \"src/**\" \"projects/**\" --quiet",
@@ -47,6 +49,7 @@
     "@types/lodash-es": "4.17.12",
     "@types/node": "18.19.67",
     "angular-eslint": "19.0.2",
+    "cypress": "14.3.3",
     "eslint": "9.16.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
