--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "@angular/platform-browser": "19.2.10",
     "@angular/platform-browser-dynamic": "19.2.10",
     "@angular/router": "19.2.10",
+    "@ngrx/effects": "19.2.0",
+    "@ngrx/entity": "19.2.0",
+    "@ngrx/operators": "19.2.0",
+    "@ngrx/router-store": "19.2.0",
+    "@ngrx/store": "19.2.0",
+    "@ngrx/store-devtools": "19.2.0",
     "bootstrap": "5.3.6",
     "rxjs": "7.8.2",
     "tslib": "2.3.1",
@@ -59,6 +65,7 @@
     "jest-preset-angular": "14.4.2",
     "lint-staged": "15.2.11",
     "ng-packagr": "19.2.2",
+    "ngrx-store-freeze": "0.2.4",
     "postcss": "8.4.49",
     "stylelint": "16.11.0",
     "stylelint-config-alphabetical-order": "1.0.0",
