--- a/angular.json
+++ b/angular.json
@@ -44,7 +44,8 @@
               },
               "includePaths": [
                 "projects/ql-common/main/styles",
-                "projects/ql-shared/main/styles"
+                "projects/ql-shared/main/styles",
+                "projects/ql-shared/todos/main/styles"
               ]
             }
           },
